aws-eks-terraform/B-eks-addons-setup/2-sub-modules/b-alb-controller-stack/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb                
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: service-2048
            servicePort: 80
